<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.globe3.tno.g3_mobile.fragments.SelectFingerFragment"
    android:background="@color/windowBackground"
    android:id="@+id/ll_main_container">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_staff_photo"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/ic_person_black_48dp"/>
        <RelativeLayout
            android:id="@+id/rl_no_photo"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border_gray_dashed"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAllCaps="true"
                android:textColor="@color/colorMenuLight"
                android:text="@string/label_no_photo"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_staff_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlackLight"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/tv_staff_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMenuDark"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:clickable="true"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:background="?attr/selectableItemBackground"
        android:text="@string/label_take_photo" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:clickable="true"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorBlueGrey"
        android:background="?attr/selectableItemBackground"
        android:text="@string/label_cancel" />
</LinearLayout>
