<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:context="com.globe3.tno.g3_mobile.fragments.RegisterFingerFragment"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        card_view:cardCornerRadius="2dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:background="#FFF">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/rl_staff_photo"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:id="@+id/iv_staff_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/ic_person_black_48dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/tv_staff_id"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:textColor="@color/colorBlackLight"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/tv_staff_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBorder"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:background="@color/windowBackground"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/colorMenu"
                        android:src="@drawable/ic_search_black_18dp"/>
                    <EditText
                        android:id="@+id/tv_search_project"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:padding="0dp"
                        android:lines="1"
                        android:textColorHint="@color/colorHint"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:hint="@string/hint_search_project_code" />
                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_project_list"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/windowBackground"
                    android:scrollbars="vertical"
                    android:visibility="visible"/>
                <RelativeLayout
                    android:id="@+id/rl_search_loader"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/windowBackground"
                    android:visibility="gone">
                    <ImageView
                        android:id="@+id/iv_search_loader"
                        android:src="@drawable/progress_indeterminate"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:contentDescription="@string/image_rotate_loader"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/rl_no_record"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/windowBackground"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true"
                        android:textColor="@color/colorBlackLight"
                        android:textSize="16sp"
                        android:text="@string/msg_no_record_found"/>
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_action_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:clickable="true"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:background="?attr/selectableItemBackground"
                android:text="@string/label_skip_project" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBorder"/>
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:clickable="true"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorBlueGrey"
                android:background="?attr/selectableItemBackground"
                android:text="@string/label_cancel"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>