<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.globe3.tno.g3_mobile.fragments.RegisterFingerFragment"
    android:id="@+id/ll_main_container">

    <android.support.v7.widget.CardView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        card_view:cardCornerRadius="2dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:background="#FFF">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/rl_staff_photo"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:id="@+id/iv_staff_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/ic_person_black_48dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/tv_staff_id"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:textColor="@color/colorBlackLight"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tv_staff_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/rl_staff_finger"
                    android:layout_width="72dp"
                    android:layout_height="72dp">
                    <ImageView
                        android:id="@+id/iv_staff_finger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/colorSuccess"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_fingerprint_black_48dp" />
                    <ImageView
                        android:id="@+id/iv_staff_finger_count"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_finger_one"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorBorder"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                    <TextView
                        android:background="@drawable/background_button_group_single_full_blue"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:padding="4dp"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:text="@string/label_location_check"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/colorAccentLight"
                    android:text="@string/msg_scan_your_fingerprint" />

                <ImageView
                    android:id="@+id/iv_loader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_refresh_black_48dp"
                    android:contentDescription="@string/msg_connecting_to_scanner"
                    android:tint="@color/colorAccentLight"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_finger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fingerprint_black_48dp"
                    android:contentDescription="@string/msg_scan_your_fingerprint"
                    android:tint="@color/colorAccentLight" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_action_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:clickable="true"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:background="?attr/selectableItemBackground"
                android:text="@string/label_refresh_scanner" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBorder"/>
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:clickable="true"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorBlueGrey"
                android:background="?attr/selectableItemBackground"
                android:text="@string/label_cancel"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>